[gd_scene load_steps=15 format=3 uid="uid://cn2kr73xkn1fr"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_fnarl"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="1_jbg6b"]
[ext_resource type="Script" uid="uid://hylp5tkvl2c0" path="res://addons/CustomControls/Dialogs/edit_event_dialog.gd" id="2_76sai"]
[ext_resource type="PackedScene" uid="uid://ccipi0sikmjuu" path="res://addons/CustomControls/custom_tab_container.tscn" id="2_dyjno"]
[ext_resource type="Texture2D" uid="uid://cdrbqebe0wwuf" path="res://addons/CustomControls/Images/button1_background2.png" id="4_l7i8v"]
[ext_resource type="Texture2D" uid="uid://3jfwca2m08uh" path="res://addons/CustomControls/Images/button1_background_selected2.png" id="5_d6ss7"]
[ext_resource type="PackedScene" uid="uid://da1n7ig83tsok" path="res://addons/CustomControls/Dialogs/edit_event_page.tscn" id="6_wi52r"]
[ext_resource type="PackedScene" uid="uid://bg11fd6hmeg30" path="res://addons/CustomControls/quest_manager_panel_for_events.tscn" id="8_f0bo5"]
[ext_resource type="PackedScene" uid="uid://7lpq8met7dlu" path="res://addons/CustomControls/relationship_manager_panel_for_events.tscn" id="9_d6ss7"]

[sub_resource type="Gradient" id="Gradient_gxhcl"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_s3a4r"]
gradient = SubResource("Gradient_gxhcl")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d5k6b"]
texture = ExtResource("5_d6ss7")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0
modulate_color = Color(0.84800005, 1, 0.84000003, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fys7c"]
texture = ExtResource("4_l7i8v")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6gnsf"]
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="EditEventDialog" type="Window" groups=["event_editor"]]
oversampling_override = 1.0
title = "Edit Event"
position = Vector2i(0, 36)
size = Vector2i(1400, 1000)
wrap_controls = true
transient = true
exclusive = true
min_size = Vector2i(1400, 1000)
theme = ExtResource("1_fnarl")
script = ExtResource("2_76sai")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_s3a4r")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 18
theme_override_constants/margin_top = 18
theme_override_constants/margin_right = 18
theme_override_constants/margin_bottom = 18

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TopContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="VBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.15

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/TopContainer/VBoxContainer"]
layout_mode = 2
text = "Name:"

[node name="EventName" type="LineEdit" parent="MarginContainer/VBoxContainer/TopContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(470.625, 0)
layout_mode = 2
size_flags_horizontal = 3
editable = false
caret_blink = true

[node name="SaveAsPresetButton" parent="MarginContainer/VBoxContainer/TopContainer/VBoxContainer" instance=ExtResource("1_jbg6b")]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
tooltip_text = "[title]Save As Preset[/title]
Save this event as a preset so you can create it quickly whenever you want."
text = "Save As Preset"

[node name="LegacyMode" type="CheckBox" parent="MarginContainer/VBoxContainer/TopContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "[title]Legacy Mode[/title]
Emulates the behavior of other RPG Makers (when an event activates its page, if a command changes the active page, only the active pageâ€™s graphic is updated, but the current page continues executing all of its commands).
When disabled, any command that changes the active page will interrupt the current pageâ€™s commands and immediately jump to the active page.

[Note]: This setting can be configured as the default in the System section of the database for newly created events. The eventâ€™s Legacy setting applies only to that specific event."
mouse_default_cursor_shape = 2
text = "Legacy Mode Enabled"

[node name="FadePageSwap" type="CheckBox" parent="MarginContainer/VBoxContainer/TopContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "[title]Fade Page Swap[/title]
When an event command changes the active page for that event, the graph for the next active page will appear instantly if this parameter is disabled (legacy mode) or via a fade out/fade in when this parameter is enabled.

[Note]: This setting can be configured as the default in the System section of the database for newly created events. The eventâ€™s fade page swap setting applies only to that specific event."
mouse_default_cursor_shape = 2
text = "Enable Fade Page Swap"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
theme_override_constants/margin_top = 38

[node name="HBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 0.65

[node name="NewPageButton" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("1_jbg6b")]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.65)
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
tooltip_text = "[title]Add New Page[/title]
Add a new command page to the event"
disabled = true
text = "NEW
PAGE"

[node name="CopyPageButton" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("1_jbg6b")]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.65)
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
tooltip_text = "[title]Copy Page[/title]
Copy the current page to the clipboard"
disabled = true
text = "COPY
PAGE"

[node name="PastePageButton" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("1_jbg6b")]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.65)
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
tooltip_text = "[title]Paste Page[/title]
Paste a page previously copied to the clipboard"
disabled = true
text = "PASTE
PAGE"

[node name="RemovePageButton" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("1_jbg6b")]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.65)
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
tooltip_text = "[title]Erase Page[/title]
Delete the current page for this event"
disabled = true
text = "REMOVE
PAGE"

[node name="CleanPageButton" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("1_jbg6b")]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.65)
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
tooltip_text = "[title]Clean Page[/title]
Resets the status of the selected page"
disabled = true
text = "CLEAN
PAGE"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(160, 8)
layout_mode = 2

[node name="QuestManagerButton" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("1_jbg6b")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
tooltip_text = "[title]Quest Manager[/title]
Here you can add all the quests that this event can provide.
If, when interacting with the event, the requirements to start or complete one of its quests are met, the full quest process will run first. After that, the commands from the eventâ€™s active page will be executed.

Quests also require that you interact with the event on specific pages in order to be eligible to start or complete them (as long as the other requirements defined in the database for that quest are also met)."
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_d5k6b")
theme_override_styles/pressed = SubResource("StyleBoxTexture_fys7c")
toggle_mode = true
text = "MANAGE
QUESTS"

[node name="RelationshipManagerButton" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer" instance=ExtResource("1_jbg6b")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
tooltip_text = "[title]Relationship Manager[/title]
Here you can add all relationship levels for this event.

[Note]: You can use the relationship with an NPC as a requirement for a quest, or combine it with conditional commands to create your own systems."
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_styles/normal = SubResource("StyleBoxTexture_d5k6b")
theme_override_styles/pressed = SubResource("StyleBoxTexture_fys7c")
toggle_mode = true
text = "MANAGE
RELATIONSHIP"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
z_index = 10
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 14
theme_override_constants/margin_bottom = 0

[node name="ColorRect" type="ColorRect" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer"]
clip_children = 1
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
size_flags_horizontal = 3
color = Color(0.2, 0.227451, 0.27451, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BackToPagesButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/ColorRect/HBoxContainer" instance=ExtResource("1_jbg6b")]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(110, 0)
layout_mode = 2
tooltip_text = "[title]Back To Event Pages[/title]
Exit quest manager mode."
theme_override_styles/normal = SubResource("StyleBoxTexture_d5k6b")
theme_override_styles/pressed = SubResource("StyleBoxTexture_fys7c")
text = "ðŸ¢€ Back"

[node name="EventPageContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/ColorRect/HBoxContainer" instance=ExtResource("2_dyjno")]
unique_name_in_owner = true
clip_children = 0
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
background_color = Color(0, 0, 0, 0)

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_6gnsf")

[node name="EditEventPage" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer" instance=ExtResource("6_wi52r")]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="QuestManagerPanel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer" instance=ExtResource("8_f0bo5")]
unique_name_in_owner = true
layout_mode = 2

[node name="RelationshipManagerPanel" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer" instance=ExtResource("9_d6ss7")]
unique_name_in_owner = true
layout_mode = 2

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 2

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("1_jbg6b")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("1_jbg6b")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
text = "CANCEL"

[node name="ApplyButton" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("1_jbg6b")]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.65)
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
disabled = true
text = "APPLY"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/TopContainer/VBoxContainer/EventName" to="." method="_on_event_name_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TopContainer/VBoxContainer/SaveAsPresetButton" to="." method="_on_save_as_preset_button_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/TopContainer/VBoxContainer/LegacyMode" to="." method="_on_legacy_mode_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/TopContainer/VBoxContainer/FadePageSwap" to="." method="_on_fade_page_swap_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer/NewPageButton" to="." method="_on_new_page_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer/CopyPageButton" to="." method="_on_copy_page_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer/PastePageButton" to="." method="_on_paste_page_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer/RemovePageButton" to="." method="_on_remove_page_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer/CleanPageButton" to="." method="_on_clean_page_button_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer/QuestManagerButton" to="." method="_on_quest_manager_button_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer/HBoxContainer/RelationshipManagerButton" to="." method="_on_relationship_manager_button_toggled"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/ColorRect/HBoxContainer/BackToPagesButton" to="." method="_on_back_to_pages_button_pressed"]
[connection signal="tab_changed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/MarginContainer/ColorRect/HBoxContainer/EventPageContainer" to="." method="_on_event_page_container_tab_changed"]
[connection signal="changed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/PanelContainer/EditEventPage" to="." method="_on_edit_event_page_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/HBoxContainer2/ApplyButton" to="." method="_on_apply_button_pressed"]
